# ES143_FinalProject

./: .gitignore  README.md  images_to_video.py  pyproject.toml  save_calibration.py
helper programs/: debug_features.py  extract_two_frames.py  inspect_board.py
outputs/Reconstructions/COLMAP/: COLMAP_sfm_points_and_cameras.html
outputs/Reconstructions/COLMAP/COLMAP_Implementation/: VideoToPictures-1.py
outputs/Reconstructions/COLMAP/COLMAP_Implementation/colmap/sparse/0/: cameras.txt  frames.txt  points3D.txt
outputs/Reconstructions/COLMAP/COLMAP_Implementation/colmap/sparse/1/: project.ini
outputs/Reconstructions/Temple/: calibration.npz  scene.npz
outputs/Reconstructions/cabinet/: calibration.npz  scene.npz
outputs/Reconstructions/mailroom/: scene1npz
outputs/Reconstructions/mailroom/final/: calibration.npz  scene.npz
outputs/Reconstructions/piano/: scene.npz
outputs/Reconstructions/piano/final/: calibration.npz  scene.npz
outputs/Reconstructions/posters/: calibration.npz
sfm_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sfm_app/ba/: bundle_adjustment.py
sfm_app/calib/: aprilboard_calib.py
sfm_app/cli/: __init__.py  main.py
sfm_app/features/: keypoints.py  matching.py
sfm_app/geometry/: essential.py  fundamental.py  pnp.py  triangulation.py
sfm_app/io/: calib_io.py  video_io.py
sfm_app/sfm_inc/: data_structures.py  incremental_sfm.py
sfm_app/viz/: __init__.py  plotly_viz.py
